# sentinel-analysis

./: README.md  pyproject.toml
notebooks/: 01-how-to-read.ipynb
src/sentinel_analysis/: __init__.py
