[project]
name = "sentinel-analysis"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Simon Jaricot", email = "simon.jaricot@protonmail.com" }
]
dependencies = [
    "notebook>=7.2.2",
    "jupyterlab>=4.2.5",
    "pandas>=2.2.3",
    "rasterio>=1.4.0",
    "geopandas>=1.0.1",
    "rioxarray>=0.17.0",
    "matplotlib>=3.9.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_analysis"]
